# SolanaSniper

./: .env.production  .env.template  .env.test  .gitignore  ACHIEVEMENTS.md  CHANGELOG.md  CONTABO-DEPLOYMENT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  check_dashboard_data.py  check_devnet_balance.py  check_testnet_balance.py  check_wallet_address.py  check_your_wallet.py  config.example.toml  config.test.toml  contabo-deploy.sh  contabo-setup.sh  dashboard_api_example.js  dashboard_components_example.jsx  debug_db_format.py  deploy.sh  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  redis.conf  requirements.txt  setup_dev_environment.sh  setup_devnet_wallet.py  setup_testnet_wallet.py  setup_wallet.py  simple_redis_test.py  standalone_test.rs  test_api.html  (+2 more)
.github/workflows/: ci.yml  release.yml
.taskmaster/: config.json
configs/: bot.toml
crates/sniperbot_ui_api/: Cargo.toml
crates/sniperbot_ui_api/src/: lib.rs  main.rs
crates/sniperbot_ui_api/src/handlers/: health.rs  live_events.rs  market_data.rs  mod.rs  orders.rs  portfolio.rs  positions.rs  report_events.rs  status.rs  strategies.rs  websocket.rs
crates/sniperbot_ui_api/src/middleware/: mod.rs
crates/sniperbot_ui_api/src/models/: app_state.rs  mod.rs  report_event.rs
docs/: README.md  api.md  color-scheme-improvements.md  configuration.md  crawl4ai_architecture.md  deployment.md  frontend-integration.md  strategies.md
examples/: websocket_example.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivePositions.tsx  LiveEventLog.tsx  PortfolioOverview.tsx
frontend/src/components/charts/: InsightChart.tsx
frontend/src/components/common/: MetricCard.tsx
frontend/src/components/dashboard/: AIInsightsDashboard.tsx  BotStatusDashboard.tsx  EntityBrowser.tsx  EpisodeTimeline.tsx  KnowledgeExplorer.tsx  PatternRecognition.tsx  SignalsDashboard.tsx  SmartAlerts.tsx  TradesDashboard.tsx
frontend/src/components/graphs/: GraphControls.tsx  KnowledgeGraph.tsx  NodeDetails.tsx
frontend/src/components/layout/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/context/: SniperBotContext.tsx  ThemeContext.tsx
frontend/src/styles/: trading-colors.css
frontend/src/utils/: api.ts  mockData.ts
pyinstaller_scripts/: soul_meteor_scanner.py
pyinstaller_scripts/crawl4ai_service/: README.md  build_executable.py  config.py  crawl4ai_scraper.py  crawl4ai_service.spec  data_processor.py  main.py  requirements.txt  sentiment_analyzer.py  test_input.json
pyinstaller_scripts/scrapy_service/: build_executable.py  config.py  main.py  requirements.txt  scrapy_engine.py
python_bridge/: graphiti_bridge.py
scripts/: PRD.txt  start_dev.sh  start_with_frontend.sh
src/: ai_decision_engine.rs  ai_signal_processor.rs  api_server.rs  config.rs  db_connector.rs  dragonfly_manager.rs  graphiti_integration.rs  lib.rs  live_trading_engine.rs  main.rs  portfolio_manager.rs
src/analytics_aggregator/: mod.rs
src/config/: mod.rs
src/data_fetcher/: api_client.rs  binance_client.rs  client_factory.rs  data_aggregator.rs  jupiter_client.rs  market_scanner.rs  meteora_client.rs  mod.rs  pumpfun_client.rs  raydium_client.rs  realtime_websocket_manager.rs  solana_client.rs  soul_meteor_scanner.rs  textual_data_fetcher.rs  websocket_manager.rs
src/execution/: balance_manager.rs  enhanced_executor.rs  jito_executor.rs  jupiter_executor.rs  mod.rs
src/models/: mod.rs  persistent_state.rs  python_compat.rs
src/pipeline/: controller.rs  decision_engine.rs  mod.rs  opportunity.rs
src/position_management/: active_position.rs  mod.rs  position_manager.rs
src/reflex_core/: mod.rs  new_token_opportunity.rs  onchain_stream_listener.rs  sniper_executor.rs
src/risk_management/: mod.rs
src/strategy/: arbitrage_strategy.rs  enhanced_strategy.rs  liquidity_sniping.rs  meteora_dlmm_strategy.rs  mod.rs  pumpfun_sniping.rs  pure_sniper_strategy.rs  strategy_manager.rs  volume_spike_strategy.rs
src/utils/: config.rs  http_client.rs  logging.rs  mod.rs
src/utils/reporter/: mod.rs
tests/: CHAOS_TESTING_GUIDE.md  basic_test.rs  conftest.py  full_lifecycle_test.rs  integration_post_optimization.rs  lib.rs  live_trading_test.rs  metrics_dashboard.py  requirements.txt  run_chaos_tests.py  run_tests.py  simple_test_report_20250610_074646.json  simple_test_report_20250610_074737.json  simple_test_report_20250610_080545.json  test_advanced_ai_features.rs  test_advanced_analytics.rs  test_analyst_agent.py  test_async_fix.py  test_chaos_engineering.py  test_config.toml  test_configuration.py  test_coverage_demo.py  test_data_validation.py  test_deepseek_integration.py  test_edge_cases.py  test_enhanced_mistral_agents.rs  test_enhanced_python_bridge.rs  test_error_recovery.py  test_external_apis.py  test_full_pipeline.py  test_helius_enhanced_monitor.rs  test_helius_mistral_integration.rs  test_helpers.py  test_jito_integration.rs  test_live_trading_engine.rs  test_livestore.py  test_logging_monitoring.py  test_market_scenarios.py  test_native_python_bridge.rs  test_performance.py  (+21 more)
tests/fixtures/: mock_responses.rs  mod.rs  test_data.rs
tests/integration/: api_integration_tests.rs  helius_api_tests.rs  jito_api_tests.rs  jito_integration_tests.rs  jupiter_api_tests.rs  main.rs  mev_protection_tests.rs  mod.rs  simple_integration_test.rs  test_helpers.rs  trading_flow_tests.rs
tests/performance/: api_latency_tests.rs  memory_benchmarks.rs  mod.rs  speed_benchmarks.rs
tests/unit/: helius_tests.rs  jito_tests.rs  jupiter_tests.rs  mem0_tests.rs  mod.rs
tests/unit/strategies/: microbot_tests.rs  mod.rs
