[package]
name = "sniper-bot"
version = "0.1.0"
edition = "2021"
authors = ["SynergiaOS <synergiaos@outlook.com>"]
description = "High-performance trading bot built in Rust with hybrid AI/ML architecture"
license = "MIT"
repository = "https://github.com/SynergiaOS/SniperBot"

[workspace]
members = [
    ".",
    "crates/sniperbot_ui_api",
]
resolver = "2"

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# HTTP client and networking
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
redis = { version = "0.25", features = ["tokio-comp"] }  # Local DragonflyDB (no TLS needed)
deadpool-redis = "0.14"  # Connection pooling for DragonflyDB
bb8-redis = "0.15"  # Alternative connection pool

# Blockchain integration
solana-sdk = "2.0"
solana-client = "2.0"
solana-account-decoder = "2.0"
solana-transaction-status = "2.0"
solana-program = "2.0"
ethers = "2.0"

# Jupiter and Jito integration
# Jupiter integration via HTTP API calls
# Jito integration for MEV protection
base64 = "0.22"
bs58 = "0.5"
bincode = "1.3"

# Configuration management
config = "0.14"
dotenvy = "0.15"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
async-trait = "0.1"
urlencoding = "2.1"

# Python integration for Graphiti (commented out for now)
# pyo3 = { version = "0.22", features = ["auto-initialize"] }
# pyo3-asyncio = "0.20"  # Async Python integration



# Metrics and monitoring
prometheus = "0.13"

# Web framework for API
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Internal crates
sniperbot_ui_api = { path = "crates/sniperbot_ui_api" }

# Security
ring = "0.17"
mistralai-client = "0.14.0"
rand = "0.9.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tracing-test = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "sniper-bot"
path = "src/main.rs"

[[bin]]
name = "test_reflex_core"
path = "src/bin/test_reflex_core.rs"

[[bin]]
name = "hybrid_system"
path = "src/bin/hybrid_system.rs"
