[package]
name = "sniperbot_ui_api"
version = "0.1.0"
edition = "2021"
authors = ["SynergiaOS <synergiaos@outlook.com>"]
description = "REST API server for SniperBot UI and external integrations"

[dependencies]
# Web framework
axum = "0.7.9"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# HTTP
hyper = "1.6"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
